now: Version next
    - Computer's latest piece deployed glows so human user can easily notice
      what was the latest move
    - App kills itself instead of hunging up when unexpected state occurs 
      if cumputing thread is busy
    - Progress bar and moves calculated by worker thread are totally 
      thread-safe now

16/04/2010: Version 0.1.5
    - Minmax has been fixed. It was faulty because pieces weren't being 
      rotated once they were mirrored during the AI calculations.
    - Editing piece drawing area contains 4 buttons, so the user can rotate
      to the left and right and mirror over the X and Y axis.
    - Game1v1 test code fixed
    - Game->New menu restarts the user's stopwatch even if there's no pieces
      on the board

09/04/2010: Version 0.1.4
    - Added stopwatch to measure how long computer and human take to move
    - Computer player doesn't process the next move so hard if it already 
      managed to block completely the human user (it was a bit tedious to wait
      before)
    - Added a bit of randomness to the starting move when the computer player
      starts. What is life without randomness after all?
    - Progress bar in the status bar is fully functional
    - Removed extra command line window when running in the windows platform
    - Board drawing area is now handling its own events. GUI code has been
      improved a lot throughout the last couple of versions

04/04/2010: Version 0.1.3
    - Computer's pieces left are shown on the right side of the board
    - Current score is shown on the status bar at all times
    - Correct version shown on the AboutDialog when help->About is pressed
    - Editing piece area shows a circle sorrounding the selected piece
    - More refactoring done on the GUI code

26/03/2010: Version 0.1.2
    - The ugly buttons that used to represent pieces have been changed by 
      real (and beautiful) pieces.
    - Ghost pieces on the board were kept painted even when the mouse